0.9.7.1:
- Added Feature: Now creates a backup file of a settings.xml every time it alters it (in case it gets corrupted)
- Bugfix: Videos with & in the title gave an error when playing.
- Fix: Doesnt scan the library after refreshing a plyalist anymore
- 

0.9.7:
- Added [Donor only]: Browse & Add pre-configured playlists from youtubelibrary.nl
- Youtubelibrary now has its repo! Install via the repo to get auto updates!
- Added Feature: You can now also search & add playlists by their name, id or even their url!
- Added Feature: You can now browse more then 50 playlists from a channel

0.9.6.2:
- Fixed Bug: Addon setting "nofify update" was missing its text

0.9.6.1:
- Fix: Hopefully the double userdata fix also works on linux now.

0.9.6:
- Uses normal icon/fanart again. (if you liked the newyear art better, you can still find it in the root)
- Added Feature: Only grab the last X videos instead of grabbing all videos from the channel / playlist
- Completely redid the way the service works, making different updating rules for each playlist possible
- Added Feature: Set frequency of updates for each playlist seperately
- Added Feature: Set desired day of the week for the updating of playlists
- Added Feature: Set desired time of the day for the updating of playlists
- Added Feature: song_fallback: video title (original). Just use the original video title as the song title, just as it is on youtube.
- Added Feature: Creates artist.nfo & artwork (unfortunatly kodi does not seem to grab these. Perhaps some skins will)
- Added: You can turn on/off the notify message when a playlist gets updated
- Added: TV Fanart also saved in a subdir called extrafanart
- Added: TV .strm & .nfo files are now stored in subdirectories of their season
- Fixed Bug: Unicode error when playing videos
- Fixed Bug: Unicode file paths (japanese characters etc work)
- Fix: Support for smb:// paths